Fixed unexpected highlight behaviour on mobiles

--- a/src/app/util/core/common-style/style.scss
+++ b/src/app/util/core/common-style/style.scss
@@ -10,7 +10,7 @@ body {
   margin: 0;
 }
 
-.active.active.active {
+.active.active.active.active {
   background: rgba(255, 255, 255, 0.1);
 }
 
